# real-estate-valuation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dataset-metadata.json  pyproject.toml  requirements.txt  План ВКР.txt
.devcontainer/: devcontainer.json  setup.sh
configs/: config.yaml
data/: astana_urls_to_parse.txt
data/geo/: bishkek_roads.qmd
data/raw/: .gitignore  README.md  baseline.ipynb  data_mining.py  main.ipynb  missing_urls.txt  requirements.txt
data/raw/flask_app/: .gitignore  Dockerfile  app.py  functions.py  model.pkl  requirements.txt
data/raw/flask_app/data/: complexes.csv
data/raw/flask_app/templates/: index.html  prediction_result.html
docs/: ARCHITECTURE.md  DATABASE.md  FEATURES.md  MODELS.md  SCRAPING.md  astana_data_report.md  astana_model_recommendations.md  data_collection_report.md  index.md  План Q3 Research Paper.txt
docs/experiments/: 2024-12-29_baseline_models.md  2024-12-29_extra_features.md  2024-12-29_final_tuning.md  2024-12-29_hyperparameter_tuning.md  2024-12-29_new_features.md  2024-12-29_poi_features.md  2025-01-06_astana_model_results.md  2026-01-07_model_improvement_research.md
notebooks/: astana_model_training.ipynb  bishkek_cv_model.ipynb  bishkek_cv_model.py  bishkek_model_training.ipynb  bishkek_model_training_v2.ipynb  bishkek_model_training_v3.ipynb  bishkek_multimodal_model.ipynb  bishkek_multimodal_model.py  bishkek_v3_best.ipynb  bishkek_v3_roads.ipynb  kernel-metadata.json
scripts/: auto_restart_parser.sh  enrich_listings.py  migrate_to_sqlite.py  upload_to_kaggle.py
src/database/: db_manager.py
src/features/: advanced_features.py
src/models/: baseline.py  tuning.py
src/preprocessing/: features.py
src/scrapers/: house_kg.py  house_kg_jk.py  krisha_kz.py
tests/: test_scraper.py
